# cookiecutter-ml-templates

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  TEMPLATE_ROADMAP.md  copier.yml  mkdocs.yml  project_structure.py  pyproject.toml  pyrightconfig.json  requirements.txt  tasks.py
.claude/: copier_migration.md
.claude/skills/copier-docs/: SKILL.md
.claude/skills/dtu-mlops-docs/: SKILL.md
.claude/skills/ml-templates/: SKILL.md
.github/: context.md  custom_instructions.md
.github/workflows/: ci.yml
_shared/questions/: author.yml  deps_manager.yml  licensing.yml
_shared/scripts/: add_deps.py
docs/: index.md
docs/available-templates/: barebone.md  classification.md  flow-matching.md  mnist-wandb.md  overview.md  rl.md
docs/development/: contributing.md  creating-templates.md  testing-templates.md
docs/getting-started/: first-project.md  installation.md  quickstart.md
docs/guides/: dependency-management.md  github-integration.md  hydra-config.md  project-structure.md  testing.md
docs/reference/: best-practices.md  faq.md  template-options.md
hooks/: post_gen_project.py
templates/MNIST_wandb_image_logger/: cookiecutter.json
templates/MNIST_wandb_image_logger/hooks/: post_gen_project.py
templates/MNIST_wandb_image_logger/{{cookiecutter.repo_name}}/: README.md  pixi.toml  pyproject.toml  requirements.txt  tasks.py
templates/MNIST_wandb_image_logger/{{cookiecutter.repo_name}}/configs/: train_config.yaml
templates/MNIST_wandb_image_logger/{{cookiecutter.repo_name}}/configs/callbacks/: default_callbacks.yaml
templates/MNIST_wandb_image_logger/{{cookiecutter.repo_name}}/configs/data/: default_data_module.yaml
templates/MNIST_wandb_image_logger/{{cookiecutter.repo_name}}/configs/experiments/: debug.yaml
templates/MNIST_wandb_image_logger/{{cookiecutter.repo_name}}/configs/model/: default_model.yaml
templates/MNIST_wandb_image_logger/{{cookiecutter.repo_name}}/docs/source/: index.md
templates/MNIST_wandb_image_logger/{{cookiecutter.repo_name}}/src/{{cookiecutter.project_name}}/: __init__.py  barebones_datamodule.py  train.py
templates/MNIST_wandb_image_logger/{{cookiecutter.repo_name}}/src/{{cookiecutter.project_name}}/callbacks/: image_logger.py
templates/MNIST_wandb_image_logger/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: __init__.py
templates/MNIST_wandb_image_logger/{{cookiecutter.repo_name}}/tests/: test_data.py  test_model.py
templates/barebone/: CLAUDE.md.jinja  README.md.jinja  cookiecutter.json  copier.yml  pixi.toml.jinja  pyproject.toml.jinja  tasks.py.jinja
templates/barebone/.github/: custom_instructions.md
templates/barebone/data/: README.md.jinja
templates/barebone/hooks/: post_gen_project.py
templates/barebone/tests/: test_data.py.jinja  test_model.py.jinja
templates/barebone/{{cookiecutter.repo_name}}/: README.md  pixi.toml  pyproject.toml  pyproject_pip.toml  pyproject_uv.toml  requirements.txt  requirements_dev.txt  tasks.py  tasks_pip.py  tasks_uv.py
templates/barebone/{{cookiecutter.repo_name}}/configs/callbacks/: default_callbacks.yaml
templates/barebone/{{cookiecutter.repo_name}}/configs/data/: default_data_module.yaml
templates/barebone/{{cookiecutter.repo_name}}/configs/model/: default_model.yaml
templates/barebone/{{cookiecutter.repo_name}}/docs/: mkdocs.yaml
templates/barebone/{{cookiecutter.repo_name}}/docs/source/: index.md
templates/barebone/{{cookiecutter.repo_name}}/src/{{cookiecutter.project_name}}/: __init__.py  barebones_lightningmodule.py
templates/barebone/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: train.py
templates/barebone/{{cookiecutter.repo_name}}/tests/: conftest.py  test_config.py  test_data.py  test_model.py
templates/classification/: cookiecutter.json
templates/classification/hooks/: post_gen_project.py
templates/classification/{{cookiecutter.repo_name}}/: README.md  pixi.toml  pyproject.toml  requirements.txt  requirements_dev.txt  tasks_pip.py  tasks_uv.py
templates/core/classification/: CLAUDE.md.jinja  LICENSE.jinja  README.md.jinja  cookiecutter.json  copier.yml  pixi.toml.jinja  pyproject.toml.jinja  tasks.py.jinja
templates/extensions/image_logger/: .copier-answers.image_logger.yml.jinja  copier.yml
templates/flow_matching/: TEMPLATE_SUMMARY.md  cookiecutter.json
templates/flow_matching/hooks/: post_gen_project.py
templates/flow_matching/{{cookiecutter.repo_name}}/: README.md  pixi.toml  pyproject.toml  requirements.txt
templates/flow_matching/{{cookiecutter.repo_name}}/configs/data/: default_data_module.yaml
templates/flow_matching/{{cookiecutter.repo_name}}/configs/model/: default_model.yaml  moons_model.yaml
templates/flow_matching/{{cookiecutter.repo_name}}/notebooks/: train.ipynb
templates/flow_matching/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: __init__.py  flow_matching_module.py
templates/flow_matching/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/data/: __init__.py
templates/flow_matching/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/models/: __init__.py  flow_matching.py  mlp.py
templates/flow_matching/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/modules/: __init__.py
templates/flow_matching/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/networks/: __init__.py  mlp.py
templates/flow_matching/{{cookiecutter.repo_name}}/tests/: test_model.py  test_train_script.py
templates/generative/flow_matching/: CLAUDE.md.jinja  README.md.jinja  cookiecutter.json  copier.yml  pixi.toml.jinja  pyproject.toml.jinja  requirements.txt  tasks.py.jinja
templates/generative/vae/: CLAUDE.md.jinja  README.md.jinja  copier.yml  pixi.toml.jinja  pyproject.toml.jinja  tasks.py.jinja
templates/rl/: CLAUDE.md.jinja  LICENSE.jinja  README.md.jinja  cookiecutter.json  copier.yml  pixi.toml.jinja  pyproject.toml.jinja  tasks.py.jinja
tests/: README.md  test_add_deps.py  test_base_generation.py  test_create_project.py  test_extension_application.py  test_slow_integration.py  test_validation.py
(+212 files in other folders)
