[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["templates/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D103", "D104", "INP001", "T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S607", "PLC0415", "PLW1510"]  # Test-only patterns

[tool.coverage.run]
include = ["src/*"]
omit = ["tests/*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--color=yes",
]
