[build-system]
{%- if cookiecutter.deps_manager == 'uv' %}
requires = ["hatchling"]
build-backend = "hatchling.build"
{%- else %}
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
{%- endif %}

[project]
name = {{ cookiecutter.project_name|tojson }}
version = "0.0.1"
description = {{ cookiecutter.description|tojson }}
authors = [
  { name = {{ cookiecutter.author_name|tojson }}, email = "your@email.com" },
]
{% if cookiecutter.open_source_license != 'No license file' %}license = { file = "LICENSE" }{% endif %}
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"

{%- if cookiecutter.deps_manager == 'uv' %}
dependencies = [
    "invoke>=2.2.0",
    "hydra-core>=1.3.2",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "torch>=2.0.0",
    "lightning>=2.2.0",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "torchvision>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=23.9.1",
    "ruff>=0.2.2",
    "pre-commit>=3.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "invoke>=2.2.0",
    "mypy>=1.8.0",
    "nbqa>=1.7.1",
    "nbstripout>=0.7.1",
    "bandit[toml]>=1.7.7",
    "pytest-cov>=4.1.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31.0",
    "types-setuptools>=69.0.0",
]
{%- else %}
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}
{%- endif %}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W"]
ignore = ["N812", "N813"]  # Ignore rules about import casing conventions

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--doctest-modules",
    "--color=yes",
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
