[build-system]
{%- if cookiecutter.deps_manager == 'uv' %}
requires = ["hatchling"]
build-backend = "hatchling.build"
{%- else %}
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
{%- endif %}

[project]
name = {{ cookiecutter.repo_name|tojson }}
version = "0.0.1"
description = {{ cookiecutter.description|tojson }}
authors = [
  { name = {{ cookiecutter.author_name|tojson }}, email = "your@email.com" },
]
{% if cookiecutter.open_source_license != 'No license file' %}license = { file = "LICENSE" }{% endif %}
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"

{%- if cookiecutter.deps_manager == 'uv' %}
dependencies = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "hydra-core>=1.3.0",
    "wandb>=0.15.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "invoke>=2.2.0",
]
{%- else %}
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}
{%- endif %}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--doctest-modules",
    "--color=yes",
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
